@@ -283,15 +283,6 @@ operator|.
 name|WINDOWS
 argument_list|)
 expr_stmt|;
-name|assumeFalse
-argument_list|(
-literal|"This test fails with Java 9 (https://issues.apache.org/jira/browse/SOLR-8876)"
-argument_list|,
-name|Constants
-operator|.
-name|JRE_IS_MINIMUM_JAVA9
-argument_list|)
-expr_stmt|;
 block|}
 annotation|@
 name|Before
